@@ -8,6 +8,8 @@ on October 14, 2001,
 
 *Jikes RVM 2.X.Y Release Notes (future)
 ** Highlights
+*** The recommended version of GNU classpath is 0.93-generics.
+    Earlier versions of GNU classpath are not supported.
 
 ** Bug fixes
 
